# python-template

./: .gitignore  README.md  pyproject.toml  setup.cfg
.githooks/: pre-commit
ci-scripts/: run-static-tests  run-unit-tests
