[metadata]
name=TODO
version=0.0.1
url=TODO
author="Mark Bragg"
license=TODO
description="TODO"

[options]
python_requires=>= 3.7
package_dir =
    =src
packages=find:
include_package_data=True

[options.pacckages.find]
where=src

[options.extras_require]
test=
    black
    flake8-bugbear
    mypy
    pytest

[flake8]
max-line-length=100
